Sat Jan 01 18:58:12 2000  George Lebl <jirka@5z.com>

	* gnome-dentry-edit.c: use LC_MESSAGES category instead of LC_ALL
	  for the message translations of the dentry fields

Wed Dec 29 16:53:35 1999  George Lebl <jirka@5z.com>

	* oafgnome.c: add include for unistd.h and fcntl.h to make this
	  actually compile

1999-12-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-child.[ch] (gnome_mdi_child_set_toolbar_template):
	new function for setting child's toolbar template.
	(gnome_mdi_child_set_toolbar_position): set default values for
	toolbar insertion.
	(gnome_mdi_child_add_toolbar): adds a toolbar to an app using
	default values stored in the child.
	* gnome-mdi.c (gnome_mdi_view_changed): take care of child's
	toolbar.
	(book_button_release): a fix to get the [view|child]_changed signal
	emitted when a page is dropped on the notebook.
	* gnome-mdiP.h: add a new #define for child's toolbar UIInfo key
	and its name.
	* gnome-mdi.h: indentation improvements.

1999-12-25  Ettore Perazzoli  <ettore@gnu.org>

	[From Morten Welinder <terra@diku.dk>]
	* gnome-app.c (gnome_app_destroy): Unref the dock layout if not
	NULL.

1999-12-21  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnome-helpsys.c (gnome_help_app_topics): Removed extra loop 
	iterator, to prevent a crash.
	(gnome-help_path_resolve): Same.

1999-12-21  Havoc Pennington  <hp@redhat.com>

	* oafgnome.c (rcmd_activator): make it compile

	* gnome-preferences.h: take load/save custom out of the header
	(this hasn't compiled for ages, don't know why no one noticed).

	* gnome-stock.h, gnome-stock.c: emacs magic

	* gnome-pixmap.c, gnome-pixmap.h: Add copyright notices and file
	magic. comment cleanup

	* gnome-ditem-edit.h, gnome-ditem-edit.c: mostly cut-and-paste 
	from gnome-dentry-edit, not testable until we get the icon list.
	
Tue Dec 21 02:06:25 1999  George Lebl <jirka@5z.com>

	* gnome-calculator.[ch]: make the get_result be a function rather
	  then a macro to make bindings easier
